compiler/tests/en/errors/circ_a.salam
// EXPECT: E008
package circa

import "circ_b.salam"

func A() i32: ret 1 end
